--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
         <title>Alejandro Toral</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L97GVNWPE5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L97GVNWPE5');
+</script>
     <body>
         <!--===== HEADER =====-->
         <header class="l-header">
