Actualizar vta.html

--- a/vta.html
+++ b/vta.html
@@ -99,7 +99,7 @@
   </style>
 </head>
 <body>
-  <h1>Conversor de Divisas</h1>
+  <h1>Divisas</h1>
   <div class="container" id="container-wrapper">
     <div class="row">
       <input type="text" onchange="calculate(this)" placeholder="Escribe la moneda">
