--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -43,14 +43,21 @@
             border-radius: 6px;
             border: 2px solid #bdc3c7;
             font-size: .8rem;
-            transition: border-color 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
         }
         select:focus, input:focus {
             border-color: #3498db;
+            box-shadow: 0 0 8px rgba(52, 152, 219, 0.5);
             outline: none;
         }
         select:hover, input:hover {
             border-color: #00ffbf;
+        }
+        select {
+            transition: transform 0.3s ease;
+        }
+        select:focus {
+            transform: scale(1.05);
         }
         .denomination-container {
             display: flex;
@@ -67,10 +74,11 @@
             border: 2px solid #bdc3c7;
             text-align: center;
             font-size: 0.8rem;
-            transition: border-color 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
         }
         .denomination-input-container input:focus {
             border-color: #3498db;
+            box-shadow: 0 0 8px rgba(52, 152, 219, 0.5);
             outline: none;
         }
         .denomination-input-container input:hover {
@@ -94,14 +102,38 @@
             border-radius: 6px;
             border: 2px solid #bdc3c7;
             font-size: 0.8rem;
-            transition: border-color 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
         }
         #currency-key:focus {
             border-color: #3498db;
+            box-shadow: 0 0 8px rgba(52, 152, 219, 0.5);
             outline: none;
         }
         #currency-key:hover {
             border-color: #00ffbf;
+        }
+        .error {
+            border-color: #e74c3c !important;
+        }
+        .error-message {
+            color: #e74c3c;
+            font-size: 0.8rem;
+            margin-top: -10px;
+            margin-bottom: 10px;
+        }
+        #print-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 6px;
+            border: none;
+            background-color: #3498db;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        #print-button:hover {
+            background-color: #2a3e52;
         }
     </style>
 </head>
@@ -117,6 +149,7 @@
         <div id="date-time"  style="font-size: 0.8rem; color: #7700ff; margin-bottom: 10px;"></div>
         <hr style="border-color:#7700ff;">
         <input type="number" id="currency-key" placeholder="Clave divisa 🔑" oninput="selectCurrencyByKey()" />
+        <div id="currency-key-error" class="error-message" style="display: none;">Clave de divisa no válida</div>
         <select id="currency" onchange="updateCurrencyKey()">
           <option value="S/N">--- Seleccione una divisa ---</option>
             <option value="MXN">Moneda Nacional (MXN)</option>
@@ -149,6 +182,7 @@
         </select>
         <div id="denominations-container"></div>
         <div class="total" id="total">Monto total: $0.00</div>
+        <button id="print-button" onclick="printTicket()">Imprimir Ticket</button>
     </div>
     <script>
         function updateDateTime() {
@@ -197,28 +231,47 @@
             29: 'SEK', 5: 'CHF', 34: 'TRY'
         };
 
+        // Optimización del código JavaScript basado en las sugerencias
+
+        // Actualización de denominaciones con optimización
         function updateDenominations() {
             const currency = document.getElementById('currency').value;
             const denominations = denominationsByCurrency[currency];
             const denominationsContainer = document.getElementById('denominations-container');
-            denominationsContainer.innerHTML = "";
+
+            // Limpiar contenedor de denominaciones
+            while (denominationsContainer.firstChild) {
+                denominationsContainer.removeChild(denominationsContainer.firstChild);
+            }
 
             if (!denominations) return;
 
+            // Crear y agregar denominaciones utilizando createElement()
             denominations.forEach(denomination => {
                 const denominationRow = document.createElement('div');
                 denominationRow.className = 'denomination-container';
-                denominationRow.innerHTML = `
-                    <label>${denomination}:</label>
-                    <div class="denomination-input-container">
-                        <input type="number" data-denomination="${denomination}" placeholder="💲" onchange="updateSubtotal(this)" />
-                    </div>
-                `;
+
+                const label = document.createElement('label');
+                label.textContent = `${denomination}:`;
+
+                const inputContainer = document.createElement('div');
+                inputContainer.className = 'denomination-input-container';
+
+                const input = document.createElement('input');
+                input.type = 'number';
+                input.setAttribute('data-denomination', denomination);
+                input.placeholder = '💲';
+                input.addEventListener('change', updateSubtotal);
+
+                inputContainer.appendChild(input);
+                denominationRow.appendChild(label);
+                denominationRow.appendChild(inputContainer);
                 denominationsContainer.appendChild(denominationRow);
             });
         }
 
-        function updateSubtotal(input) {
+        // Actualización del subtotal y total optimizada
+        function updateSubtotal() {
             updateTotal();
         }
 
@@ -230,16 +283,28 @@
                 const value = parseInt(input.value) || 0;
                 total += denomination * value;
             });
-            document.getElementById('total').textContent = 'Total: ' + total.toLocaleString();
+            document.getElementById('total').textContent = 'Monto total: $' + total.toLocaleString('es-MX', { style: 'currency', currency: 'MXN' });
         }
 
+        // Seleccionar divisa por clave con optimización y gestión de errores
         function selectCurrencyByKey() {
             const key = parseInt(document.getElementById('currency-key').value);
             const currency = currencyMap[key] ? currencyMap[key] : "";
-            document.getElementById('currency').value = currency;
-            updateDenominations();
+            const currencyKeyInput = document.getElementById('currency-key');
+            const errorMessage = document.getElementById('currency-key-error');
+
+            if (currency) {
+                document.getElementById('currency').value = currency;
+                currencyKeyInput.classList.remove('error');
+                errorMessage.style.display = 'none';
+                updateDenominations();
+            } else {
+                currencyKeyInput.classList.add('error');
+                errorMessage.style.display = 'block';
+            }
         }
 
+        // Actualizar clave de divisa con optimización
         function updateCurrencyKey() {
             const currency = document.getElementById('currency').value;
             const key = Object.keys(currencyMap).find(key => currencyMap[key] === currency);
@@ -247,6 +312,33 @@
             updateDenominations();
         }
 
+        // Función para imprimir ticket
+        function printTicket() {
+            const user = document.getElementById('user-input').value;
+            const sucursal = document.getElementById('sucursal').value;
+            const currency = document.getElementById('currency').value;
+            const dateTime = document.getElementById('date-time').textContent;
+            let denominationsText = '';
+
+            const inputs = document.querySelectorAll('.denomination-container input');
+            inputs.forEach(input => {
+                const denomination = input.getAttribute('data-denomination');
+                const value = parseInt(input.value) || 0;
+                if (value > 0) {
+                    denominationsText += `${denomination}: ${value}\n`;
+                }
+            });
+
+            const total = document.getElementById('total').textContent;
+
+            const ticketContent = `Retiro de divisas\nFecha: ${dateTime}\nUsuario: ${user}\nSucursal: ${sucursal}\nDivisa: ${currency}\n${denominationsText}${total}`;
+
+            const newWindow = window.open('', '', 'width=400,height=600');
+            newWindow.document.write(`<pre>${ticketContent}</pre>`);
+            newWindow.print();
+        }
+
+        // Llamada inicial para actualizar denominaciones
         updateDenominations();
     </script>
 </body>
