Actualizar divfr.html

--- a/divfr.html
+++ b/divfr.html
@@ -561,10 +561,10 @@ function imprimirRolloTermico() {
     const headers = [
         "#".padEnd(maxLengths[0], ' '),
         "Cant".padEnd(maxLengths[1], ' '),
-        "Monto".padEnd(maxLengths[2], ' '),
-        "Falta".padEnd(maxLengths[3], ' '),
-        "Total".padEnd(maxLengths[4], ' '),
-        "Desg".padEnd(maxLengths[5], ' ')
+        "Monto MXN".padEnd(maxLengths[2], ' '),
+        "Falta x Des".padEnd(maxLengths[3], ' '),
+        "Total MXN".padEnd(maxLengths[4], ' '),
+        "Desglosado".padEnd(maxLengths[5], ' ')
     ].join("|");
 
     // Línea separadora ajustada al ancho total
