--- a/divfr.html
+++ b/divfr.html
@@ -585,11 +585,11 @@ function imprimirRolloTermico() {
         const celdas = Array.from(fila.cells);
         contenido += [
             celdas[0].textContent.trim().padEnd(maxLengths[0], ' '), // Número
-            celdas[1].textContent.trim().padEnd(maxLengths[1], ' '), // Cantidad
-            celdas[3].textContent.trim().padEnd(maxLengths[2], ' '), // Monto
-            celdas[4].textContent.trim().padEnd(maxLengths[3], ' '), // Falta
-            celdas[5].textContent.trim().padEnd(maxLengths[4], ' '), // Total
-            celdas[6].textContent.trim().padEnd(maxLengths[5], ' ') // Desglose
+            celdas[1].textContent.replace('$', '')trim().padEnd(maxLengths[1], ' '), // Cantidad
+            celdas[3].textContent.replace('$', '')trim().padEnd(maxLengths[2], ' '), // Monto
+            celdas[4].textContent.replace('$', '')trim().padEnd(maxLengths[3], ' '), // Falta
+            celdas[5].textContent.replace('$', '')trim().padEnd(maxLengths[4], ' '), // Total
+            celdas[6].textContent.replace('$', '')trim().padEnd(maxLengths[5], ' ') // Desglose
         ].join("|") + "\n";
     });
 
