--- a/divfr.html
+++ b/divfr.html
@@ -587,9 +587,9 @@ function imprimirRolloTermico() {
             celdas[0].textContent.trim().padEnd(maxLengths[0], ' '), // Número
             celdas[1].textContent.trim().padEnd(maxLengths[1], ' '), // Cantidad
             celdas[3].textContent.trim().padEnd(maxLengths[2], ' '), // Monto
-            celdas[4].textContent.trim().padEnd(maxLengths[3], ' '), // Falta
+            celdas[4].textContent.replace('$', '').trim().padEnd(maxLengths[3], ' '), // Falta
             celdas[5].textContent.trim().padEnd(maxLengths[4], ' '), // Total
-            celdas[6].textContent.trim().padEnd(maxLengths[5], ' ') // Desglose
+            celdas[6].textContent.replace('$', '').trim().padEnd(maxLengths[5], ' ') // Desglose
         ].join("|") + "\n";
     });
 
