--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -329,7 +329,8 @@
         </table>
     </main>
     <footer>
-        Actualizado el sábado, 7 de diciembre - <a href="https://divisascc.blogspot.com/">www.divisascc.blogspot.com</a>
+        Actualizado el sábado, 7 de diciembre de 2024
+        <a href="https://divisascc.blogspot.com/">www.divisascc.blogspot.com</a>
     </footer>
     <div class="user-message" id="userMessage">Mensaje</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
