--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -329,8 +329,11 @@
         </table>
     </main>
     <footer>
-        Actualizado el sábado, 7 de diciembre de 2024
-        <a href="https://divisascc.blogspot.com/">www.divisascc.blogspot.com</a>
+        <a href="https://divisascc.blogspot.com/" target="_blank">Recuerda que puedes consultar las divisas en www.divisascc.blogspot.com</a>
+        <br>
+        <span>Actualizado el día Lunes, 09 de diciembre de 2024, por 
+            <a href="https://thoral.netlify.app/" target="_blank">Alejandro Toral</a>
+        </span>
     </footer>
     <div class="user-message" id="userMessage">Mensaje</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
