Actualizar DivisasBlandas.html

--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -82,11 +82,11 @@
 
         .button-container {
             text-align: left;
-            margin: 20px 0;
+            margin: 20px auto;
         }
 
         .button-container button {
-            margin-right: 15px;
+            margin: 12px;
         }
 
         button {
