--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -7,146 +7,186 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Divisas Blandas</title>
     <style>
-        :root {
-            --primary-color: rgba(255, 255, 255, 0.8);
-            --secondary-color: rgb(0, 0, 0);
-            --accent-color: rgb(108, 121, 139);
-            --background-color: rgba(245, 245, 247, 0.9);
-            --text-color: #1d1d1f;
-            --header-text-color: rgba(0, 0, 0, 0.8);
-            --footer-bg: rgba(245, 245, 247, 0.8);
-        }
+/* Variables de diseño */
+:root {
+    --primary-bg-color: rgba(255, 255, 255, 0.8);
+    --secondary-color: #000;
+    --accent-color: #6c798b;
+    --background-color: rgba(245, 245, 247, 0.9);
+    --text-color: #1d1d1f;
+    --header-text-color: rgba(0, 0, 0, 0.8);
+    --footer-bg: rgba(245, 245, 247, 0.8);
+    --hover-color: rgba(56, 106, 156, 0.1);
+    --error-color: #d9534f;
+}
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            line-height: 1.6;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
+/* Estilos generales */
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif-fallback;
+    margin: 0;
+    padding: 0;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    line-height: 1.7;
+    transition: background-color 0.3s, color 0.3s;
+    min-height: 105vh;
+}
 
-        header {
-            background-color: var(--primary-color);
-            color: var(--header-text-color);
-            text-align: center;
-            padding: 5px 0;
-            font-size: 1.8rem;
-            font-weight: 600;
-            animation: fadeIn 0.8s ease;
-            border-radius: 12px;
-            margin: 20px auto;
-            max-width: 1000px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
+/* Header */
+header {
+    background-color: var(--primary-bg-color);
+    color: var(--header-text-color);
+    text-align: center;
+    padding: 10px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border-radius: 12px;
+    margin: 10px auto;
+    max-width: 1000px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 0.8s ease;
+}
 
-        main {
-            padding: 20px;
-            max-width: 1000px;
-            margin: 30px auto;
-            border-radius: 12px;
-            background: var(--primary-color);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-            animation: fadeInUp 0.8s ease;
-        }
+/* Main */
+main {
+    padding: 20px;
+    max-width: 1000px;
+    margin: 10px auto;
+    border-radius: 12px;
+    background: var(--primary-bg-color);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    animation: fadeInUp 0.8s ease;
+}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            background: var(--primary-color);
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+/* Tabla */
+.table-container {
+    overflow-x: auto;
+}
 
-        table thead {
-            background-color: var(--primary-color);
-            color: var(--secondary-color);
-            font-weight: bold;
-        }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    background: var(--primary-bg-color);
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
 
-        table th,
-        table td {
-            padding: 15px;
-            text-align: center;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
+table thead {
+    background-color: var(--primary-bg-color);
+    color: var(--secondary-color);
+    font-weight: bold;
+}
 
-        table tbody tr:hover {
-            background-color: rgba(56, 106, 156, 0.1);
-            transform: scale(1.03);
-        }
+table th, table td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    transition: background-color 0.3s, transform 0.5s ease-in-out;
+}
 
-        .button-container {
-            text-align: left;
-            margin: 20px auto;
-        }
+table tbody tr {
+    transition: transform .2s ease-in-out;
+}
 
-        .button-container button {
-            margin: 10px;
-        }
+table tbody tr:hover {
+    background-color: var(--hover-color);
+    transform: translateY(-2px);
+}
 
-        button {
-            padding: 12px 24px;
-            font-size: 1rem;
-            font-weight: 500;
-            color: #000000;
-            background-color: var(--primary-color);
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            border: 1.5px solid #000000;
-        }
+table tbody tr:not(:hover) {
+    transform: translateY(0);
+}
 
-        button:hover {
-            background-color: var(--secondary-color);
-            color: var(--primary-color);
-            transform: scale(1.05);
-        }
+/* Botones */
+.button-container {
+    text-align: left;
+    margin: 0px auto;
+}
+.button-container button {
+    margin: 10px;
+}
 
-        button i {
-            margin-right: 8px;
-        }
+button {
+    padding: 12px 24px;
+    font-size: .8rem;
+    font-weight: 500;
+    color: var(--secondary-color);
+    background-color: var(--primary-bg-color);
+    border: 1.5px solid var(--secondary-color);
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
 
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: var(--footer-bg);
-            color: var(--secondary-color);
-            border-top: 1px solid rgba(0, 0, 0, 0.1);
-            animation: fadeIn 0.8s ease;
-            border-radius: 12px;
-            margin: 20px auto;
-            max-width: 1000px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
+button:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-bg-color);
+    transform: scale(1.05);
+    box-shadow: 0 0 15px 3px var(--accent-color);
+}
 
-        a {
-            color:darkcyan;
-            text-decoration: none;
-        }
+button:focus {
+    outline: 1px dashed var(--accent-color);
+    outline-offset: 4px;
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
+button:active {
+    transform: scale(1.2);
+}
 
-        .user-message {
+button i {
+    margin-right: 8px;
+}
+
+/* Footer */
+footer {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width:auto;
+    padding: 15px 20px;
+    background-color: var(--footer-bg, #333);
+    color: var(--secondary-color, #fff);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+
+/* Enlaces */
+a {
+    color: darkcyan;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: var(--accent-color);
+}
+
+/* Mensajes del usuario */
+.user-message {
     position: fixed;
     top: -100px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+    background-color: rgba(255, 255, 255, 0.493);
+    backdrop-filter: blur(10px);
+    color: var(--text-color);
     padding: 10px 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     opacity: 0;
     z-index: 1000;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.3s, transform 0.3s;
+    font-size: 1rem;
+    will-change: opacity, transform;
 }
 
 .user-message.show {
@@ -154,72 +194,64 @@
     opacity: 1;
 }
 
+/* Animaciones */
 @keyframes slideDownUp {
-    0% {
+    0%, 100% {
         top: -100px;
         opacity: 0;
     }
-    10% {
+    10%, 90% {
         top: 20px;
         opacity: 1;
-    }
-    90% {
-        top: 20px;
-        opacity: 1;
-    }
-    100% {
-        top: -100px;
-        opacity: 0;
     }
 }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
-            to {
-                opacity: 1;
-            }
-        }
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
+/* Responsive */
+@media screen and (max-width: 768px) {
+    header {
+        font-size: 1.5rem;
+        padding: 20px;
+    }
 
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    main {
+        padding: 15px;
+    }
 
-        @media screen and (max-width: 768px) {
-            header {
-                font-size: 1.5rem;
-                padding: 20px 0;
-            }
+    table th, table td {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
 
-            main {
-                padding: 15px;
-            }
+    button {
+        padding: 10px 20px;
+        font-size: 0.9rem;
+    }
 
-            table th,
-            table td {
-                padding: 10px;
-                font-size: 0.9rem;
-            }
+    footer {
+        font-size: 0.9rem;
+    }
+}
 
-            button {
-                padding: 10px 20px;
-                font-size: 0.9rem;
-            }
-
-            footer {
-                font-size: 0.9rem;
-            }
-        }
     </style>
 </head>
 
