--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -29,7 +29,7 @@ body {
     color: var(--text-color);
     line-height: 1.7;
     transition: background-color 0.3s, color 0.3s;
-    min-height: 105vh;
+    min-height: 100vh;
 }
 
 /* Header */
@@ -56,6 +56,7 @@ main {
     background: var(--primary-bg-color);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     animation: fadeInUp 0.8s ease;
+    margin-bottom: 80px;
 }
 
 /* Tabla */
@@ -87,12 +88,12 @@ table th, table td {
 }
 
 table tbody tr {
-    transition: transform .2s ease-in-out;
+    transition: transform .3s ease-in-out;
 }
 
 table tbody tr:hover {
     background-color: var(--hover-color);
-    transform: translateY(-2px);
+    transform: translateY(-3px);
 }
 
 table tbody tr:not(:hover) {
@@ -143,20 +144,17 @@ button i {
 /* Footer */
 footer {
     position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width:auto;
-    padding: 15px 20px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
     background-color: var(--footer-bg, #333);
     color: var(--secondary-color, #fff);
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     z-index: 1000;
-    text-align: center;
-    font-size: 0.9rem;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
 }
-
 
 /* Enlaces */
 a {
