--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -7,22 +7,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Divisas Blandas</title>
     <style>
-/* Variables de diseño */
+/* Variables principales */
 :root {
     --primary-bg-color: rgba(255, 255, 255, 0.8);
     --secondary-color: #000;
     --accent-color: #6c798b;
-    --background-color: rgba(245, 245, 247, 0.9);
+    --background-color: rgba(131, 159, 175, 0.719);
     --text-color: #1d1d1f;
     --header-text-color: rgba(0, 0, 0, 0.8);
     --footer-bg: rgba(245, 245, 247, 0.8);
     --hover-color: rgba(56, 106, 156, 0.1);
     --error-color: #d9534f;
+    --success-color: #5cb85c;
+    --info-color: #5bc0de;
+    --warning-color: #f0ad4e;
+    --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    --border-radius: 12px;
 }
 
 /* Estilos generales */
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif-fallback;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: var(--background-color);
@@ -40,10 +45,10 @@ header {
     padding: 10px;
     font-size: 1.5rem;
     font-weight: 600;
-    border-radius: 12px;
+    border-radius: var(--border-radius);
     margin: 10px auto;
     max-width: 1000px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
     animation: fadeIn 0.8s ease;
 }
 
@@ -52,9 +57,9 @@ main {
     padding: 20px;
     max-width: 1000px;
     margin: 10px auto;
-    border-radius: 12px;
+    border-radius: var(--border-radius);
     background: var(--primary-bg-color);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--box-shadow);
     animation: fadeInUp 0.8s ease;
     margin-bottom: 80px;
 }
@@ -69,8 +74,8 @@ table {
     border-collapse: collapse;
     margin: 20px 0;
     background: var(--primary-bg-color);
-    border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
     overflow: hidden;
 }
 
@@ -94,10 +99,7 @@ table tbody tr {
 table tbody tr:hover {
     background-color: var(--hover-color);
     transform: translateY(-3px);
-}
-
-table tbody tr:not(:hover) {
-    transform: translateY(0);
+    box-shadow: var(--box-shadow);
 }
 
 /* Botones */
@@ -106,12 +108,12 @@ table tbody tr:not(:hover) {
     margin: 0px auto;
 }
 .button-container button {
-    margin: 10px;
+    margin: 8px;
 }
 
 button {
     padding: 12px 24px;
-    font-size: .8rem;
+    font-size: 0.8rem;
     font-weight: 500;
     color: var(--secondary-color);
     background-color: var(--primary-bg-color);
@@ -137,10 +139,6 @@ button:active {
     transform: scale(1.2);
 }
 
-button i {
-    margin-right: 8px;
-}
-
 /* Footer */
 footer {
     position: fixed;
@@ -149,8 +147,8 @@ footer {
     width: 100%;
     text-align: center;
     padding: 10px;
-    background-color: var(--footer-bg, #333);
-    color: var(--secondary-color, #fff);
+    background-color: var(--footer-bg);
+    color: var(--secondary-color);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     z-index: 1000;
     box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
@@ -178,8 +176,8 @@ a:hover {
     backdrop-filter: blur(10px);
     color: var(--text-color);
     padding: 10px 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
     opacity: 0;
     z-index: 1000;
     transition: opacity 0.3s, transform 0.3s;
@@ -224,6 +222,14 @@ a:hover {
     }
 }
 
+/* Preferencias para usuarios con sensibilidad al movimiento */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation: none !important;
+        transition: none !important;
+    }
+}
+
 /* Responsive */
 @media screen and (max-width: 768px) {
     header {
@@ -248,6 +254,33 @@ a:hover {
     footer {
         font-size: 0.9rem;
     }
+
+    .table-container {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    main {
+        margin: 5px;
+        padding: 10px;
+    }
+
+    table th, table td {
+        padding: 8px;
+        font-size: 0.8rem;
+    }
+
+    button {
+        padding: 8px 16px;
+        font-size: 0.8rem;
+    }
+
+    .table-container {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
 }
 
     </style>
@@ -259,9 +292,9 @@ a:hover {
     </header>
     <main>
         <div class="button-container">
-            <button id="resetFilters"><i class="fas fa-filter"></i>Borrar Filtros</button>
-            <button id="printPage"><i class="fas fa-print"></i>Imprimir</button>
-            <button id="exportPDF"><i class="fas fa-file-pdf"></i>Descargar en PDF</button>
+            <button id="resetFilters"><i class="fas fa-filter"></i> Borrar Filtros</button>
+            <button id="printPage"><i class="fas fa-print"></i> Imprimir</button>
+            <button id="exportPDF"><i class="fas fa-file-pdf"></i> Descargar en PDF</button>
         </div>
         <table id="sortableTable">
             <thead>
