--- a/DivisasBlandas.html
+++ b/DivisasBlandas.html
@@ -62,11 +62,15 @@ main {
     box-shadow: var(--box-shadow);
     animation: fadeInUp 0.8s ease;
     margin-bottom: 80px;
+    padding-bottom: 100px; /* Espacio para evitar que el footer se superponga */
 }
 
 /* Tabla */
 .table-container {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    max-width: 100%; /* Asegurar que no exceda el contenedor */
+    padding-bottom: 10px;
 }
 
 table {
@@ -275,6 +279,12 @@ a:hover {
     button {
         padding: 8px 16px;
         font-size: 0.8rem;
+    }
+
+    footer {
+        padding: 10px;
+        font-size: 0.8rem;
+        height: auto;
     }
 
     .table-container {
